@@ -1,3 +1,8 @@
+2003-02-24  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* generic/tkTable.c (TableDisplay): do not use buffer pixmap for
+	slow -drawmode on Win32 because we aren't clipping it correctly.
+
 2003-01-30  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* Makefile.in: remove use of nested $(PACKAGE) to enable building
